feat: adicionar formulário e lógica de redirecionamento na aula 52; criar nova aula 53 com botões de diálogo

--- a/aula52-historico-direcionamento/aula52.html
+++ b/aula52-historico-direcionamento/aula52.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Histórico de Direcionamento</h1>
-    <form>
+     <form onsubmit="event.preventDefault()"> <!-- //Evita o reload da página ao enviar o formulário  -->
       <input
         type="url"
         name="url"
